@@ -115,11 +115,13 @@ public class GMSClientTest
         final RegistryClient mockRegistryClient =
                 createMock(RegistryClient.class);
 
-//        expect(mockRegistryClient.getServiceURL(serviceID, Standards.UMS_USERS_01, AuthMethod.CERT))
-//            .andReturn(new URL("http://mysite.com/users"));
+        final URI serviceID = URI.create("ivo://mysite.com/users");
+
+        expect(mockRegistryClient.getServiceURL(serviceID, Standards.UMS_USERS_01, AuthMethod.CERT))
+            .andReturn(new URL("http://mysite.com/users"));
 
         replay(mockRegistryClient);
-        GMSClient client = new GMSClient()
+        GMSClient client = new GMSClient(serviceID)
         {
             @Override
             protected RegistryClient getRegistryClient()
@@ -149,15 +151,15 @@ public class GMSClientTest
         final HttpPrincipal test1UserID = new HttpPrincipal("test");
         subject.getPrincipals().add(test1UserID);
 
-        final URI serviceID = URI.create("ivo://example.org/gms");
+        final URI serviceID = URI.create("ivo://mysite.com/users");
         final RegistryClient mockRegistryClient =
                 createMock(RegistryClient.class);
 
         expect(mockRegistryClient.getServiceURL(serviceID, Standards.GMS_GROUPS_01, AuthMethod.CERT ))
-            .andReturn(new URL("http://example.org/gms"));
+            .andReturn(new URL("http://mysite.com/users"));
 
         replay(mockRegistryClient);
-        final GMSClient client = new GMSClient()
+        final GMSClient client = new GMSClient(serviceID)
         {
             @Override
             protected RegistryClient getRegistryClient()
@@ -173,42 +175,46 @@ public class GMSClientTest
             {
 
                 List<Group> initial = client
-                        .getCachedGroups(serviceID, test1UserID, Role.MEMBER, true);
+                        .getCachedGroups(test1UserID, Role.MEMBER, true);
                 Assert.assertNull("Cache should be null", initial);
 
                 // add single group as isMember might do
                 GroupURI group0uri = new GroupURI("ivo://example.org/gms?0");
                 Group group0 = new Group(group0uri);
                 client.addCachedGroup(test1UserID, group0, Role.MEMBER);
-                List<Group> actual = client.getCachedGroups(serviceID, test1UserID, Role.MEMBER, true);
+                List<Group> actual = client
+                        .getCachedGroups(test1UserID, Role.MEMBER, true);
                 Assert.assertNull("Cache should be null", actual);
 
-                Group g = client.getCachedGroup(test1UserID, group0uri, Role.MEMBER);
+                Group g = client
+                        .getCachedGroup(test1UserID, "0", Role.MEMBER);
                 Assert.assertNotNull("cached group from incomplete cache", g);
 
                 // add all groups like getMemberships might do
                 List<Group> expected = new ArrayList<Group>();
-                Group group1 = new Group(new GroupURI("ivo://example.org/gms?1"));
-                Group group2 = new Group(new GroupURI("ivo://example.org/gms?2"));
+                GroupURI group1uri = new GroupURI("ivo://example.org/gms?1");
+                GroupURI group2uri = new GroupURI("ivo://example.org/gms?2");
+                Group group1 = new Group(group1uri);
+                Group group2 = new Group(group2uri);
                 expected.add(group0);
                 expected.add(group1);
                 expected.add(group2);
 
-                client.setCachedGroups(serviceID, test1UserID, expected, Role.MEMBER);
+                client.setCachedGroups(test1UserID, expected, Role.MEMBER);
 
                 actual = client
-                        .getCachedGroups(serviceID, test1UserID, Role.MEMBER, true);
+                        .getCachedGroups(test1UserID, Role.MEMBER, true);
                 Assert.assertEquals("Wrong cached groups", expected, actual);
 
                 // check against another role
                 actual = client
-                        .getCachedGroups(serviceID, test1UserID, Role.OWNER, true);
+                        .getCachedGroups(test1UserID, Role.OWNER, true);
                 Assert.assertNull("Cache should be null", actual);
 
                 // check against another userid
                 final HttpPrincipal anotherUserID = new HttpPrincipal("anotheruser");
                 actual = client
-                        .getCachedGroups(serviceID, anotherUserID, Role.MEMBER, true);
+                        .getCachedGroups(anotherUserID, Role.MEMBER, true);
                 Assert.assertNull("Cache should be null", actual);
 
                 return null;
@@ -228,7 +234,7 @@ public class GMSClientTest
             {
 
                 List<Group> initial = client
-                        .getCachedGroups(serviceID, test2UserID, Role.MEMBER, true);
+                        .getCachedGroups(test2UserID, Role.MEMBER, true);
                 Assert.assertNull("Cache should be null", initial);
 
                 List<Group> expected = new ArrayList<Group>();
@@ -237,21 +243,21 @@ public class GMSClientTest
                 expected.add(group1);
                 expected.add(group2);
 
-                client.setCachedGroups(serviceID, test2UserID, expected, Role.MEMBER);
+                client.setCachedGroups(test2UserID, expected, Role.MEMBER);
 
                 List<Group> actual = client
-                        .getCachedGroups(serviceID, test2UserID, Role.MEMBER, true);
+                        .getCachedGroups(test2UserID, Role.MEMBER, true);
                 Assert.assertEquals("Wrong cached groups", expected, actual);
 
                 // check against another role
                 actual = client
-                        .getCachedGroups(serviceID, test2UserID, Role.OWNER, true);
+                        .getCachedGroups(test2UserID, Role.OWNER, true);
                 Assert.assertNull("Cache should be null", actual);
 
                 // check against another userid
                 final HttpPrincipal anotherUserID = new HttpPrincipal("anotheruser");
                 actual = client
-                        .getCachedGroups(serviceID, anotherUserID, Role.MEMBER, true);
+                        .getCachedGroups(anotherUserID, Role.MEMBER, true);
                 Assert.assertNull("Cache should be null", actual);
 
                 return null;
@@ -261,7 +267,7 @@ public class GMSClientTest
         // do the same without a subject
 
         List<Group> initial = client
-                .getCachedGroups(serviceID, test1UserID, Role.MEMBER, true);
+                .getCachedGroups(test1UserID, Role.MEMBER, true);
         Assert.assertNull("Cache should be null", initial);
 
         List<Group> newgroups = new ArrayList<Group>();
@@ -270,10 +276,10 @@ public class GMSClientTest
         newgroups.add(group1);
         newgroups.add(group2);
 
-        client.setCachedGroups(serviceID, test1UserID, newgroups, Role.MEMBER);
+        client.setCachedGroups(test1UserID, newgroups, Role.MEMBER);
 
         List<Group> actual = client
-                .getCachedGroups(serviceID, test1UserID, Role.MEMBER, true);
+                .getCachedGroups(test1UserID, Role.MEMBER, true);
         Assert.assertNull("Cache should still be null", actual);
     }
 
